# conan-wiringpi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.py  conanfile.py  pi3_patch_detect.patch
images/: Thumbs.db
test_package/: CMakeLists.txt  conanfile.py  test_package.c
